--- a/2nd.html
+++ b/2nd.html
@@ -12,7 +12,7 @@
 <h1>設計團隊</h1> 
 柯怡菁 / 羅琦雯 / 邱惠慈<p>
 
-<img src="1/12.jpg" width="500"> <p>
+<img src="1/12.JPG" width="500"> <p>
    
 <audio controls autoplay loop>
 <source src="1/2.mp3" type="audio/mp3">
