--- a/3th.html
+++ b/3th.html
@@ -16,7 +16,7 @@
 菜單內容為五種常見壽司 : 甜蝦、章魚、鮪魚、鮭魚及鮭魚卵<br>
 製作品牌VI，延伸其他相關周邊與應用<p>
 
-<img src="1/13.jpg" width="500"> <p>
+<img src="1/13.JPG" width="500"> <p>
 <img src="1/22.jpg" width="500"> <p>
 <img src="1/19.jpg" width="500"> <p>
 <img src="1/20.jpg" width="500"> <p>
