--- a/5th.html
+++ b/5th.html
@@ -15,10 +15,10 @@
 
 <h1>展覽紀錄</h1> 
 
-<img src="1/14.jpg" width="500"> <p>
-<img src="1/15.jpg" width="500"> <p>
-<img src="1/16.jpg" width="500"> <p>
-<img src="1/17.jpg" width="500"> <p>
+<img src="1/14.JPG" width="500"> <p>
+<img src="1/15.JPG" width="500"> <p>
+<img src="1/16.JPG" width="500"> <p>
+<img src="1/17.JPG" width="500"> <p>
 
 
 
