--- a/2nd.html
+++ b/2nd.html
@@ -10,7 +10,7 @@
 <img src="1/23.jpg" width="200"> 
 
 <h1>設計團隊</h1> 
-柯怡菁 / 羅琦雯 / 邱惠慈<p>
+柯怡菁 / 邱惠慈 / 羅琦雯<p>
 
 <img src="1/12.JPG" width="500"> <p>
    
